# Firestream

./: .dockerignore  .env  .env.example  .envrc  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md  bootstrap.py  bootstrap.sh  conftest.py  containers.md  docker-compose.yml  entrypoint.sh  flake.nix  makefile  nohup.out  pom.xml  pyproject.toml  pytest.ini  requirements.txt  todo.md
examples/airflow-dag-dependencies/dags-workspace/: README.md  pyproject.toml
examples/airflow-dag-dependencies/dags-workspace/src/airflow_guest_dags/: __init__.py  cli.py
src/app/firestream-tui/: Cargo.toml  start.sh
src/app/firestream-tui/src/: app.rs  event.rs  lib.rs  main.rs  ui.rs
src/app/firestream-tui/src/backend/: README.md  api_client.rs  bootstrap.rs  build_queue.rs  local_backend.rs  manifest.rs  mod.rs
src/app/firestream-tui/src/models/: data.rs  mod.rs  node.rs
src/app/firestream-tui/src/services/: template_service.rs
src/app/firestream-tui/src/views/: details_pane.rs  logs_pane.rs  mod.rs  resources_pane.rs  search_view.rs
src/containers/firestream/airflow/: Makefile  docker-compose-ldap.yml  docker-compose.yml  flake.nix  module.nix  options.nix  overrides.nix  pyproject.toml  result  vendor-dags.nix
src/containers/firestream/airflow/scripts/: config.sh  env-defaults.sh  helpers.sh  init.sh  secrets.sh  validate.sh
src/containers/firestream/jupyterhub/: Makefile  README.md  docker-compose.yml  flake.nix  module.nix  options.nix  overrides.nix  pyproject.toml
src/containers/firestream/jupyterhub/scripts/: config.sh  env-defaults.sh  init.sh  secrets.sh  validate.sh
src/containers/firestream/odoo/15/: module.nix  overrides.nix  pyproject.toml
src/lib/python/etl-lib/: README.md  pyproject.toml  pytest.ini
src/lib/python/etl-lib/tests/: test_DataModel0.py  test_brownian_motion.py  test_git_revision.py  test_types.py
src/lib/python/etl_lib/: .dockerignore  .env.example  .env.local  .gitignore  README.md  TODO.md  entrypoint.sh  pyproject.toml  requirements.txt
src/lib/python/etl_lib/.devcontainer/: devcontainer.json
src/lib/python/etl_lib/docker/: Dockerfile  docker-compose.yaml
src/lib/python/etl_lib/etl_lib/: __init__.py  context.py  factory.py  model.py  sink.py
src/lib/python/etl_lib/test_WIP/: test_DataContext.py  test_DataSource.py  test_cache_invalid.py
src/lib/python/etl_lib/tests/: test_DataContext.py  test_DataModel.py  test_Secrets.py  test_jax.py  test_logging.py  test_pytorch.py
src/lib/rust/docker-manager/: Cargo.toml
src/lib/rust/docker-manager/examples/: basic_usage.rs  build_image.rs  container_operations.rs
src/lib/rust/docker-manager/src/: builder.rs  compose.rs  error.rs  image.rs  lib.rs  main.rs  system.rs  utils.rs  volume.rs
src/lib/rust/docker-manager/tests/: integration_tests.rs
src/lib/rust/filesystem-manager/: Cargo.toml  README.md
src/lib/rust/filesystem-manager/examples/: demo.rs  search_performance.rs  test_validate_path.rs
src/lib/rust/filesystem-manager/src/: lib.rs
src/lib/rust/filesystem-manager/tests/: README.md
src/lib/rust/firestream/: .gitignore  Cargo.toml  README.md  TUI_STATE_GUIDE.md  example-values.yaml  firestream.toml  test.sh
src/lib/rust/firestream-charts/: Cargo.toml
src/lib/rust/firestream-charts/src/: lib.rs  reader.rs  spec.rs
src/lib/rust/firestream-charts/tests/: integration.rs
src/lib/rust/firestream-e2e-core/: Cargo.toml
src/lib/rust/firestream-e2e-core/src/: env.rs  exec.rs  guard.rs  lib.rs  probe.rs  retry.rs
src/lib/rust/firestream-e2e-k8s/: Cargo.toml
src/lib/rust/firestream-e2e-k8s/src/: cluster.rs  deploy.rs  env.rs  exec.rs  harness.rs  images.rs  lib.rs  pg_backup.rs  portforward.rs  probes.rs
src/lib/rust/firestream-e2e-k8s/tests/: e2e_k8s.rs
src/lib/rust/firestream-healthd/: Cargo.toml
src/lib/rust/firestream-healthd/src/: main.rs  readiness.rs  routes.rs
src/lib/rust/firestream-metadata/: Cargo.toml
src/lib/rust/firestream-metadata/src/: lib.rs  reader.rs  spec.rs  validator.rs
src/lib/rust/firestream-tui/: COMPILATION_FIX.md  Cargo.toml  README.md
src/lib/rust/firestream-tui/examples/: config.toml  gpu_monitoring.md  iceberg_example.rs
src/lib/rust/firestream-tui/src/: app.rs  event.rs  main.rs  ui.rs
src/lib/rust/firestream-vib/: Cargo.toml
src/lib/rust/firestream-vib/src/: lib.rs  main.rs  source_archive.rs
src/lib/rust/firestream-vib/templates/: check-binaries.yaml.tera  check-ca-certs.yaml.tera  check-directories.yaml.tera  check-linked-libraries.yaml.tera  check-metadata-files.yaml.tera  check-spdx.yaml.tera  check-symlinks.yaml.tera  check-version.yaml.tera
src/lib/rust/helm-manager/: Cargo.toml  README.md  build.rs
src/lib/rust/k8s-manager/: CLI.md  Cargo.toml  README.md
src/lib/rust/k8s_manager/: CLI.md  Cargo.toml
src/lib/rust/nix-container-builder/: .gitignore  Cargo.toml  build.rs
src/lib/rust/templatizer/: Cargo.toml  README.md  build.rs
src/lib/rust/templatizer-puppeteer/: .gitignore  Cargo.toml  example_api_scraper.json  readme.md
src/lib/rust/templatizer-spark/: Cargo.toml
src/lib/rust/templatizer-superset/: .env.example  Cargo.toml  README.md
src/lib/rust/workspace-embed/: Cargo.toml
src/templates/MultiPlatformApp/: .env.example  .env.public  .envrc  .gitignore  .prettierrc  Cargo.toml  Makefile  README.md  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  rust-toolchain.toml  turbo.json
src/templates/MultiPlatformApp/.devcontainer/: devcontainer.json
src/templates/MultiPlatformApp/docs/: .gitignore  next.config.mjs  package.json  tsconfig.json
src/templates/MultiPlatformApp/scripts/: README.md  proto-generate.sh  quickstart.sh
src/templates/airflow_dags_workspace/: README.md  pyproject.toml
src/templates/airflow_dags_workspace/dags/: example_dag_workspace.py
src/templates/standard_project/: .env.example  .gitignore  Makefile  flake.nix  pyproject.toml  rust-toolchain.toml
src/templates/standard_project/.devcontainer/: devcontainer.json
src/templates/standard_project/src/: readme.md
(+1901 files in other folders)
