[workspace]
resolver = "3"

members = [
    "src/lib/rust/firestream-tui",
    "src/lib/rust/firestream-api-server/cli",
    "src/lib/rust/firestream-api-server/config",
    "src/lib/rust/firestream-api-server/db",
    "src/lib/rust/firestream-api-server/web",
    "src/lib/rust/firestream-api-server/macros",
    "src/lib/rust/tools/filesystem-manager",
    "src/lib/rust/tools/k8s-manager",
    "src/lib/rust/tools/templatizer-puppeteer",
    "src/lib/rust/tools/templatizer-spark",
    "src/lib/rust/tools/templatizer-superset"
]

[workspace.dependencies]
# Standard Library
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.10", features = ["v4"] }

toml = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

directories = "5"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.31"
bollard = "0.17"
which = "6.0"
indoc = "2.0"
futures = "0.3"
semver = "1.0"
whoami = "1.5"
dirs = "6.0.0"
async-trait = "0.1"
tempfile = "3.8"
tera = "1"
dialoguer = "0.11"
once_cell = "1.19"
serde_yaml = "0.9"
regex = "1.10"


# Terminal User Interface (TUI) / Command Line Interface (CLI)
clap = { version = "4", features = ["derive"] }
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }

# Kubernetes
kube = { version = "1.1.0", features = ["runtime", "derive"] }
# The feature flag must match the version of kubernetes that is the target
# K3D is provided
k8s-openapi = { version = "0.25", features = ["v1_31"] }




#[workspace.dev-dependencies]
#tempfile = "3.8"
#k8s-openapi = { version = "0.25", features = ["v1_31"] }
