[workspace]
resolver = "3"

# Default member - this makes 'cargo run' at the root run the TUI
default-members = ["src/lib/rust/firestream-tui"]

members = [
    "src/lib/rust/firestream-tui",
    "src/lib/rust/firestream-api-server/cli",
    "src/lib/rust/firestream-api-server/config",
    "src/lib/rust/firestream-api-server/db",
    "src/lib/rust/firestream-api-server/web",
    "src/lib/rust/firestream-api-server/macros",
    "src/lib/rust/tools/filesystem-manager",
    "src/lib/rust/tools/k8s-manager",
    "src/lib/rust/tools/templatizer-puppeteer",
    "src/lib/rust/tools/templatizer-spark",
    "src/lib/rust/tools/templatizer-superset"
, "src/lib/rust/tools/iceberg-manager"]

[workspace.dependencies]
# Internal Crates
templatizer-spark = { path = "src/lib/rust/tools/templatizer-spark" }
filesystem-manager = { path = "src/lib/rust/tools/filesystem-manager" }

comfy-table = "7.1.4"

# Deltalake
deltalake = { version = "0.26.2", features = ["datafusion"] }
polars = { version = "0.48.1", features = ["lazy", "parquet", "json", "csv", "temporal", "rolling_window"] }

# Apache Iceberg - DataFusion-centric implementation
iceberg = { version = "0.5.1", features = ["storage-memory", "storage-s3", "storage-fs", "storage-gcs"] }
iceberg-datafusion = { version = "0.5.1" }
iceberg-catalog-rest = { version = "0.5.1" }
iceberg-catalog-memory = { version = "0.5.1" }

# arrow
arrow = { version = "=55.0.0" }
arrow-arith = { version = "=55.0.0" }
arrow-array = { version = "=55.0.0", features = ["chrono-tz"] }
arrow-buffer = { version = "=55.0.0" }
arrow-cast = { version = "=55.0.0" }
arrow-ipc = { version = "=55.0.0" }
arrow-json = { version = "=55.0.0" }
arrow-ord = { version = "=55.0.0" }
arrow-row = { version = "=55.0.0" }
arrow-schema = { version = "=55.0.0" }
arrow-select = { version = "=55.0.0" }
object_store = { version = "0.12.1" }
parquet = { version = "=55.0.0" }

# datafusion
datafusion = "47.0.0"
datafusion-expr = "47.0.0"
datafusion-common = "47.0.0"
datafusion-ffi = "47.0.0"
datafusion-functions = "47.0.0"
datafusion-functions-aggregate = "47.0.0"
datafusion-physical-expr = "47.0.0"
datafusion-physical-plan = "47.0.0"
datafusion-proto = "47.0.0"
datafusion-sql = "47.0.0"



# Standard Library
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.10", features = ["v4"] }

toml = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

directories = "5"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.31"
bollard = "0.17"
which = "6.0"
indoc = "2.0"
futures = "0.3"
semver = "1.0"
whoami = "1.5"
dirs = "6.0.0"
async-trait = "0.1"
tempfile = "3.8"
tera = "1.20"
dialoguer = "0.11"
once_cell = "1.19"
serde_yaml = "0.9"
regex = "1.10"


# Terminal User Interface (TUI) / Command Line Interface (CLI)
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
color-eyre = "0.6.3"
thiserror = "1.0"

# Kubernetes
kube = { version = "1.1.0", features = ["runtime", "derive"] }
# The feature flag must match the version of kubernetes that is the target
# K3D is provided
k8s-openapi = { version = "0.25", features = ["v1_31"] }




#[workspace.dev-dependencies]
#tempfile = "3.8"
#k8s-openapi = { version = "0.25", features = ["v1_31"] }
