[project]
name = "etl-lib"
version = "1.0.0"
description = "A framework for developing models at scale"
authors = [{name = "datawizz", email = "36938650+datawizz@users.noreply.github.com"}]
requires-python = "==3.12.10"
dependencies = [
    "confluent-kafka==2.10.0",
    "pandas==2.2.3",
    "pyspark==3.5.4",
    #"torch==2.7.0",
    "boto3==1.38.27",
    "pydantic==2.11.5"
]

[project.optional-dependencies]
dev = [
    "pytest>=5.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
