[project]
name = "etl-lib"
version = "1.0.0"
description = "A framework for developing models at scale"
authors = [{name = "datawizz", email = "36938650+datawizz@users.noreply.github.com"}]
requires-python = "==3.12.10"
dependencies = [
    "boto3==1.38.27",
    "confluent-kafka[avro,schemaregistry]==2.10.0",
    "fastavro>=1.9.0",
    "google-cloud-secret-manager>=2.20.0",
    "pandas==2.2.3",
    "pyspark==3.5.4",
    "pydantic==2.11.5",
    "pydantic-avro>=0.6.0",
    "pydantic-spark>=0.2.0",
    "pytz>=2023.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "responses>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
