[tool.poetry]
name = "etl_lib"
version = "1.0.0"
description = "A framework for developing models at scale"
authors = ["datawizz <36938650+datawizz@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
