[package]
name = "firestream-healthd"
version = "0.1.0"
edition = "2024"
authors = ["Firestream Team"]
description = "Tiny in-image HTTP server that exposes /healthz, /readyz, /metadata, /sbom and /closure for Firestream containers"
license = "MIT"

[[bin]]
name = "firestream-healthd"
path = "src/main.rs"

[dependencies]
# Shared metadata schema/reader (no bollard/kube/tera/tokio in this dep tree)
firestream-metadata = { workspace = true }

# Blocking HTTP server (no tokio, no axum, no hyper)
tiny_http = { workspace = true }

# CLI (env-driven config)
clap = { workspace = true, features = ["derive", "env"] }

# JSON parsing for the /sbom endpoint sanity check
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Structured logging to stderr
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
