[package]
name = "firestream-tui"
version = "0.1.0"
description = "Terminal User Interface for Firestream"
authors = ["Datawizz <36938650+datawizz@users.noreply.github.com>"]
license = ""
edition = "2021"

[dependencies]
crossterm = { workspace = true, features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
color-eyre = "0.6.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
uuid = { version = "1.10", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
