[package]
name = "firestream-tui"
version = "0.1.0"
description = "Terminal User Interface for Firestream"
authors = ["Datawizz <36938650+datawizz@users.noreply.github.com>"]
license = ""
edition = "2021"

[dependencies]
crossterm = { workspace = true }
futures = { workspace = true }
ratatui = { workspace = true }
tokio = { workspace = true }
color-eyre = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
templatizer-spark = { workspace = true }
tera = { workspace = true }
