[package]
name = "firestream"
version = "0.1.0"
edition = "2021"
authors = ["Firestream Team"]
description = "CLI/TUI tool for managing data infrastructure services"

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
kube = { version = "1.1.0", features = ["runtime", "derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
k8s-openapi = { version = "0.25", features = ["v1_31"] }
directories = "5"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.31"
bollard = "0.17"
which = "6.0"
indoc = "2.0"
futures = "0.3"
semver = "1.0"
uuid = { version = "1.10", features = ["v4"] }
whoami = "1.5"
dirs = "6.0.0"

[dev-dependencies]
tempfile = "3.8"
k8s-openapi = { version = "0.25", features = ["v1_31"] }
