[package]
name = "firestream"
version = "0.1.0"
edition = "2024"
authors = ["Firestream Team"]
description = "CLI/TUI tool for managing data infrastructure services"

[lib]
name = "firestream"

[[bin]]
name = "firestream"
path = "src/main.rs"

[dependencies]
# Internal crates - firestream imports ALL other crates
docker-manager = { workspace = true }
filesystem-manager = { workspace = true }
firestream-charts = { workspace = true }
# Shared transport-agnostic e2e primitives + the relocated k8s/k3d glue
# (`firestream_e2e_core::k8s`: cluster lifecycle, KubectlExec, port-forward,
# readiness wait, per-chart probe matrix). Promoted from a dev-dependency to
# a normal dependency so the CLI can reuse the probe/cluster glue. NOTE: do
# NOT add `firestream-e2e-k8s` here — it depends on `firestream`, so a reverse
# edge would form a cycle. The reusable glue lives in core precisely to avoid
# that.
firestream-e2e-core = { workspace = true }
firestream-vib = { workspace = true }
helm-manager = { workspace = true }
k8s-manager = { workspace = true }
templatizer = { workspace = true }
nix-container-builder = { workspace = true }
wait-for-port = { workspace = true }

# External dependencies (workspace)
clap = { workspace = true, features = ["derive"] }
regex = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
kube = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
k8s-openapi = { workspace = true }
directories = { workspace = true }
chrono = { workspace = true }
sysinfo = { workspace = true }
bollard = { workspace = true }
which = { workspace = true }
indoc = { workspace = true }
futures = { workspace = true }
semver = { workspace = true }
uuid = { workspace = true }
whoami = { workspace = true }
dirs = { workspace = true }
async-trait = { workspace = true }
tempfile = { workspace = true }
tera = { workspace = true }
dialoguer = { workspace = true }
once_cell = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
k8s-openapi = { workspace = true }

# Phase 1 e2e harness deps. Tests are gated behind #[ignore] so these only
# affect `cargo test --no-run` build artifact size, never CI runtime.
wait-for-port = { workspace = true }
which = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# NOTE: `firestream-e2e-core` is now a normal [dependencies] entry (above) —
# the docker-compose harness in `tests/e2e/` still uses it (Probe trait,
# retry loop, env accessors, Exec trait), and a normal dep is visible to
# dev/test code too.
