[package]
name = "helm-manager"
version = "0.1.0"
edition = "2024"
authors = ["Firestream Team"]
description = "Helm chart lifecycle management with embedded Bitnami charts"
license = "MIT"

[[bin]]
name = "helm-manager"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI and system
clap = { workspace = true, features = ["derive", "env"] }
which = { workspace = true }

# File and compression
include_dir = { workspace = true }
flate2 = "1.0"
tempfile = { workspace = true }
directories = { workspace = true }

# Collections and utilities
indexmap = { version = "2.0", features = ["serde"] }
regex = { workspace = true }
once_cell = { workspace = true }
toml = { workspace = true }

# Environment configuration
dotenvy = "0.15"

# Time handling
chrono = { workspace = true, features = ["serde"] }

[build-dependencies]
anyhow = "1.0"
walkdir = "2.4"
flate2 = "1.0"

[dev-dependencies]
tempfile = { workspace = true }
serial_test = "3.0"
mockall = "0.12"
