[package]
name = "k8s-manager"
version = "0.1.0"
edition = "2024"
default-run = "k8s-manager"

[[bin]]
name = "k8s-manager"
path = "src/main.rs"

[dependencies]
# Internal crates
docker-manager = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { workspace = true, features = ["derive"] }

# System utilities
which = { workspace = true }
dirs = { workspace = true }

# Process execution
async-trait = { workspace = true }

# Time handling
chrono = { workspace = true }

# Configuration
toml = { workspace = true }

# Base64 encoding/decoding
base64 = "0.21"

# Temporary files
tempfile = { workspace = true }

[features]
integration_tests = []
bench = []

[dev-dependencies]
serial_test = "3.0"
